--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,31 @@
 <!-- views/index.ejs -->
-<!doctype html>
-<html>
+<!DOCTYPE html>
   <head>
-    <title>Evently</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Event Planner</title>
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.js"></script>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.css"> 
     <style>
       body {
         padding-top:80px;
+      }
+      .container {
+        margin: 0 auto;
+        width: 400px;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Evently</h1>
+      <div>
+        <h1>Evently</h1>
         <p>Login or Register with:</p>
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
+          <a href="/login" class="waves-effect waves-light btn-large"><i class="material-icons left">perm_identity</i>Login</a>
+          <a href="/signup" class="waves-effect waves-light btn-large"><i class="material-icons left">perm_identity</i>Signup</a>
+        </div>
       </div>
     </div>
   </body>
