--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,40 +1,54 @@
 <!-- views/login.ejs -->
-<!doctype html>
-<html>
+<!DOCTYPE html>
   <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Evently Login</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.js"></script>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.css"> 
     <style>
       body {
         padding-top:80px;
+      }
+      .container {
+        margin: 0 auto;
+        width: 400px;
+      }
+      .alert {
+        font-size: 1.1em;
+        color: red;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="col-sm-6 col-sm-offset-3">
-        <h1><span class="fa fa-sign-in"></span> Login</h1>
-        <!-- show any messages that come back with authentication -->
-        <% if (message.length > 0) { %>
-            <div class="alert alert-danger"><%= message %></div>
-        <% } %>
-        <!-- LOGIN FORM -->
-        <form action="/login" method="post">
-          <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" name="username">
+      <h1>Login</h1>
+      <!-- show any messages that come back with authentication -->
+      <% if (message.length > 0) { %>
+          <div class="alert alert-danger"><%= message %></div>
+      <% } %>
+      <!-- LOGIN FORM -->
+      <div class="row">
+        <form class="col s12" action="/login" method="post">
+          <div class="row">
+            <div class="input-field col s12">
+              <input name="username" id="username" type="text" class="validate">
+              <label class="active" for="username">Username</label>
+            </div>
           </div>
-          <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
+          <div class="row">
+            <div class="input-field col s12">
+              <input name="password" id="password" type="password" class="validate">
+              <label for="password">Password</label>
+            </div>
           </div>
-          <button type="submit" class="btn btn-warning btn-lg">Login</button>
+          <button type="submit" class="waves-effect waves-light btn"><i class="material-icons left">send</i>Login</button>
         </form>
-        <hr>
-        <p>Need an account? <a href="/signup">Signup</a></p>
-        <p>Or go <a href="/">home</a>.</p>
       </div>
+      <p>Need an account? <a href="/signup">Signup</a></p>
+      <p>Or go <a href="/">home</a>.</p>
     </div>
   </body>
 </html>
