--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -2,29 +2,6 @@
   padding: 10px;
 }
 
-/*.container {
-  position: relative;
-  padding: 0 0 0 250px;
-}*/
-
-/*#sidebar {
-  position: absolute;
-  top: 0;
-  bottom:0;
-  left:0;
-  width: 250px;
-  background: rgba(0,200,0,0.1);
-}*/
-
-/*#header {
-  background: rgba(0,40,200,0.1);
-  height: 100px;
-}
-
-#content {
-  background: rgba(40,100,100,0.1);
-}*/
-
 .profile {
   position: relative;
 }
@@ -51,4 +28,9 @@ header, main, footer {
   header, main, footer {
     padding-left: 0;
   }
+}
+
+.chip {
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
