--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Evently Signup</title>
     <script src="/lib/jquery/dist/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.js"></script>
+    <link rel="stylesheet" href="/lib/Materialize/dist/css/materialize.css">
+    <script src="/lib/Materialize/dist/js/materialize.js"></script>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.css"> 
     <style>
       body {
         padding-top:80px;
