Add chat socket functionality

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -82,13 +82,25 @@ header, main, footer {
   margin: 0 1rem;
 }
 
-.chat textarea {
+.chat input[type=text] {
   resize: none;
   padding-right: 24px;
+  border: none;
   border-style: none;
+
 }
 
-.chat textarea:focus {
+.chat input[type=text]:focus {
+  border: none;
   border-style: none;
+  outline: none;
+  box-shadow: none;
+}
+
+.compose-chat button {
+  background-color: Transparent;
+  border: none;
+}
+.compose-chat button:focus {
   outline: none;
 }
