--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -88,7 +88,12 @@ h3.username {
   text-align: center;
 }
 
+
 ul .my-event {
   text-align: center;
   font-size: 1.1rem;
+}
+
+.join-leave-btn {
+  margin-top: 30px;
 }
