--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -56,7 +56,6 @@ header, main, footer {
   padding-right: 24px;
   border: none;
   border-style: none;
-
 }
 
 .chat input[type=text]:focus {
@@ -96,4 +95,9 @@ ul .my-event {
 
 .join-leave-btn {
   margin-top: 30px;
+}
+
+.update-btn {
+  background-color: Transparent;
+  border: none;
 }
